payment gateway integration, email, otp, etc